--- a/react-social-ui/src/components/topbar/topbar.css
+++ b/react-social-ui/src/components/topbar/topbar.css
@@ -1,7 +1,10 @@
 .topbarContainer {
   height: 50px;
   width: 100%;
-  background-color: #1877f2;
+  /* background-color: #1877f2; */
+  /* background-color: #fdd978; */
+  /* background-color: #605542; */
+  background-color: #6e2f3b;
   display: flex;
   align-items: center;
   position: sticky;
@@ -17,7 +20,8 @@
   font-size: 24px;
   margin-left: 20px;
   font-weight: bold;
-  color: white;
+  /* color: white; */
+  color: #fdd978;
   cursor: pointer;
 }
 
@@ -28,7 +32,8 @@
 .searchbar {
   width: 100%;
   height: 30px;
-  background-color: white;
+  /* background-color: white; */
+  background-color: #fdd978;
   border-radius: 30px;
   display: flex;
   align-items: center;
@@ -42,6 +47,7 @@
 .searchInput {
   border: none;
   width: 70%;
+  background-color: #fdd978;
 }
 
 .searchInput:focus {
@@ -53,7 +59,8 @@
   display: flex;
   align-items: center;
   justify-content: space-around;
-  color: white;
+  /* color: white; */
+  color: #fdd978;
 }
 
 .topbarLink {
@@ -75,9 +82,12 @@
 .topbarIconBadge {
   width: 15px;
   height: 15px;
-  background-color: red;
+  /* background-color: red; */
+  /* background-color: #80acaa; */
+  background-color: #605542;
   border-radius: 50%;
-  color: white;
+  /* color: white; */
+  color: #fdd978;
   position: absolute;
   top: -5px;
   right: -5px;
