--- a/react-social-ui/src/components/share/share.css
+++ b/react-social-ui/src/components/share/share.css
@@ -4,6 +4,7 @@
   border-radius: 10px;
   -webkit-box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
   box-shadow: 0px 0px 16px -8px rgba(0, 0, 0, 0.68);
+  background-color: #fdd978;
 }
 
 .shareWrapper {
@@ -13,6 +14,7 @@
 .shareTop {
   display: flex;
   align-items: center;
+  /* background-color: #fdd978; */
 }
 
 .shareProfileImg {
@@ -26,6 +28,7 @@
 .shareInput {
   border: none;
   width: 80%;
+  background-color: #fdd978;
 }
 
 .shareInput:focus {
@@ -42,35 +45,39 @@
   justify-content: space-between;
 }
 
-.shareOptions{
-    display: flex;
-    margin-left: 20px;
+.shareOptions {
+  display: flex;
+  margin-left: 20px;
 }
 
-.shareOption{
-    display: flex;
-    align-items: center;
-    margin-right: 15px;
-    cursor: pointer;
+.shareOption {
+  display: flex;
+  align-items: center;
+  margin-right: 15px;
+  cursor: pointer;
 }
 
-.shareIcon{
-    font-size: 18px;
-    margin-right: 3px;
+.shareIcon {
+  font-size: 18px;
+  margin-right: 3px;
 }
 
-.shareOptionText{
-    font-size: 14px;
-    font-weight: 500;
+.shareOptionText {
+  font-size: 14px;
+  font-weight: 500;
 }
 
-.shareButton{
-    border: none;
-    padding: 7px;
-    border-radius: 5px;
-    background-color: green;
-    font-weight: 500;
-    margin-right: 20px;
-    cursor: pointer;
-    color: white;
+.shareButton {
+  border: none;
+  padding: 7px;
+  border-radius: 5px;
+  /* background-color: green; */
+  /* background-color: #605542; */
+  background-color: #6e2f3b;
+  /* background-color: #80acaa; */
+  font-weight: 500;
+  margin-right: 20px;
+  cursor: pointer;
+  /* color: white; */
+  color: #fdd978;
 }
