--- a/react-social-ui/src/components/sidebar/sidebar.css
+++ b/react-social-ui/src/components/sidebar/sidebar.css
@@ -10,9 +10,11 @@
   width: 5px;
 }
 ::-webkit-scrollbar-track {
+  /* background-color: #f1f1f1; */
   background-color: #f1f1f1;
 }
 ::-webkit-scrollbar-thumb {
+  /* background-color: rgb(179, 179, 179); */
   background-color: rgb(179, 179, 179);
 }
 
@@ -42,6 +44,10 @@
   padding: 10px;
   border-radius: 5px;
   font-weight: 500;
+  color: #fdd978;
+  /* background-color: #fdd978; */
+  /* background-color: #605542; */
+  background-color: #6e2f3b;
 }
 
 .sidebarHr {
@@ -53,5 +59,3 @@
   margin: 0;
   list-style: none;
 }
-
-
