--- a/react-social-ui/src/components/topbar/topbar.css
+++ b/react-social-ui/src/components/topbar/topbar.css
@@ -49,7 +49,6 @@
   width: 70%;
   background-color: #fdd978;
 }
-
 .searchInput:focus {
   outline: none;
 }
@@ -94,7 +93,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  font-size: 12px;
+  /* font-size: 12px; */
+  font-size: 11px;
 }
 
 .topbarImg {
