UI, finished 2nd video

--- a/react-social-ui/src/components/online/online.css
+++ b/react-social-ui/src/components/online/online.css
@@ -1,32 +1,38 @@
 .rightbarFriend {
-    display: flex;
-    align-items: center;
-    margin-bottom: 15px;
-  }
-  
-  .rightbarProfileImgContainer {
-    margin-right: 10px;
-    position: relative;
-  }
-  
-  .rightbarProfileImg {
-    width: 40px;
-    height: 40px;
-    border-radius: 50%;
-    object-fit: cover;
-  }
-  
-  .rightbarOnline{
-      width: 12px;
-      height: 12px;
-      border-radius: 50%;
-      background-color: limegreen;
-      position: absolute;
-      top: -2px;
-      right: 0;
-      border: 2px solid white;
-  }
-  
-  .rightbarUsername{
-      font-weight: 500;
-  }
+  display: flex;
+  align-items: center;
+  margin-bottom: 15px;
+}
+
+.rightbarProfileImgContainer {
+  margin-right: 10px;
+  position: relative;
+}
+
+.rightbarProfileImg {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.rightbarOnline {
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  /* background-color: limegreen; */
+  background-color: #fdd978;
+  /* background-color: #80acaa; */
+  /* background-color: #605542; */
+  /* background-color: #6e2f3b; */
+  position: absolute;
+  top: -4px;
+  right: -4px;
+  /* border: 2px solid white; */
+  /* border: 2px solid #fdd978; */
+  border: 2px solid #6e2f3b;
+}
+
+.rightbarUsername {
+  font-weight: 500;
+}
