--- a/react-social-ui/src/components/topbar/topbar.css
+++ b/react-social-ui/src/components/topbar/topbar.css
@@ -19,6 +19,7 @@
 .logo {
   font-size: 24px;
   margin-left: 20px;
+  margin-right: 20px;
   font-weight: bold;
   /* color: white; */
   color: #fdd978;
